<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ciProfileMain"
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="36dp"
            android:src="@drawable/foto_dummy_pro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDateMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:text="@string/txt_dummydate"
            app:layout_constraintBottom_toBottomOf="@+id/ciProfileMain"
            app:layout_constraintStart_toEndOf="@id/ciProfileMain"
            app:layout_constraintTop_toTopOf="@+id/ciProfileMain" />

        <ImageButton
            android:id="@+id/ibProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16dp"
            android:background="@color/white"
            android:contentDescription="@string/txt_imageview"
            android:src="@drawable/person"
            app:layout_constraintBottom_toBottomOf="@id/tvDateMain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvDateMain" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvHighlight"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300dp"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:elevation="@dimen/_16dp"
            app:cardCornerRadius="@dimen/_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ciProfileMain">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvImage"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200dp"
                    app:cardCornerRadius="@dimen/_20dp">

                    <ImageView
                        android:id="@+id/ivHighlight"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:contentDescription="@string/txt_imageview"
                        android:scaleType="centerCrop"
                        android:src="@drawable/main_banner" />
                </com.google.android.material.card.MaterialCardView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cvImage"
                    android:text="@string/txt_title2"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:id="@+id/tvTitleHighlight"
                    android:textSize="@dimen/_16sp"
                    android:textStyle="bold"/>
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/_30dp"
                    android:layout_height="@dimen/_30dp"
                    android:layout_below="@id/tvTitleHighlight"
                    android:src="@drawable/foto_dummy_pro"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:id="@+id/ciProfileAuthorHighlight"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvTitleHighlight"
                    android:text="@string/txt_author"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_toEndOf="@id/ciProfileAuthorHighlight"
                    android:id="@+id/tvAuthorNameHighlight"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvTitleHighlight"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:text="@string/txt_dummydate"
                    android:id="@+id/tvDateHighlight"/>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/cvHighlight"
            android:id="@+id/hsTopic">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_all"
                    android:textSize="@dimen/_18sp"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:id="@+id/tvAll"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_international"
                    android:textSize="@dimen/_18sp"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:id="@+id/tvInternational"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_media"
                    android:textSize="@dimen/_18sp"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:id="@+id/tvMedia"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/magazine"
                    android:textSize="@dimen/_18sp"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:id="@+id/tvMagazine"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_business"
                    android:textSize="@dimen/_18sp"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:id="@+id/tvBusiness"/>
            </LinearLayout>
        </HorizontalScrollView>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_0dp"
            android:layout_marginTop="@dimen/_16dp"
            app:layout_constraintTop_toBottomOf="@+id/hsTopic"
            tools:listitem="@layout/news_item"
            android:id="@+id/rvMain"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>